--- a/templates/tools/return.html
+++ b/templates/tools/return.html
@@ -1,16 +1,26 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
+
 {% block content %}
     {% if request.user.is_staff %}
     <p><a href="{% url 'tools_app:operation-update-create-view' %}">CHANGE TOOL</a></p>
-    <p><a href="{% url 'tools_app:completed-job' %}">Save meters</a></p>
-    <p><a href="{% url 'tools_app:update-meters' %}">Filtered</a></p>
+
+    <p><a href="{% url 'tools_app:operation-update-view' %}">Change</a></p>
     {% endif %}
+{{ listed }}
     <form method="get">
     <div class="well">
       <h4 style="margin-top: 0">Tool change</h4>
       <div class="row">
         <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.machine.label_tag }}
+          {% render_field filter.form.machine class="form-control" %}
+        </div>
+          <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.station.label_tag }}
+          {% render_field filter.form.station class="form-control" %}
+        </div>
+          <div class="form-group col-sm-4 col-md-3">
           {{ filter.form.tool.label_tag }}
           {% render_field filter.form.tool class="form-control" %}
         </div>
@@ -23,15 +33,11 @@
           {% render_field filter.form.finish_date class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
-          {{ filter.form.status.label_tag }}
-          {% render_field filter.form.status class="form-control" %}
-        </div>
-        <div class="form-group col-sm-4 col-md-3">
           {{ filter.form.meters.label_tag }}
           {% render_field filter.form.meters class="form-control" %}
         </div>
       </div>
-      <button type="submit" class="btn btn-primary">
+        <button type="submit" class="btn btn-primary">
         <span class="glyphicon glyphicon-search"></span> Search
       </button>
     </div>
@@ -51,13 +57,13 @@
             </tr>
             </thead>
             <tbody>
-            {% for borrow in filter %}
+            {% for borrow in filter.qs %}
                 <tr>
                     <td>{{ borrow.machine }}</td>
                     <td>{{ borrow.station }}</td>
                     <td>{{ borrow.tool }}</td>
-                    <td>{{ borrow.start_date|date:"d M, Y" }}</td>
-                    <td>{% if borrow.finish_date %}{{ borrow.finish_date|date:"d M, Y" }}{% endif %}</td>
+                    <td>{{ borrow.start_date|date:"Y-m-d" }}</td>
+                    <td>{% if borrow.finish_date %}{{ borrow.finish_date|date:"Y-m-d" }}{% endif %}</td>
                     <td>
                         {% if borrow.status is True %}
                             <button disabled="disabled" class="btn btn-primary" type="button" href="#">
@@ -73,6 +79,7 @@
                             </form>
                         {% endif %}
                     </td>
+                    <td>{{ borrow.meters }}</td>
                 </tr>
             {% endfor %}
             </tbody>
