--- a/templates/tools/filter_list2.html
+++ b/templates/tools/filter_list2.html
@@ -10,24 +10,44 @@
       <h4 style="margin-top: 0">Tool change</h4>
       <div class="row">
         <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.machine.label_tag }}
+          {% render_field filter.form.machine class="form-control" %}
+        </div>
+          <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.station.label_tag }}
+          {% render_field filter.form.station class="form-control" %}
+        </div>
+          <div class="form-group col-sm-4 col-md-3">
           {{ filter.form.tool.label_tag }}
           {% render_field filter.form.tool class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
-          {{ filter.form.start_date.label_tag }}
-          {% render_field filter.form.start_date class="form-control" %}
+          {{ filter.form.start_date_lte.label_tag }}
+          {% render_field filter.form.start_date_lte class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
-          {{ filter.form.finish_date.label_tag }}
-          {% render_field filter.form.finish_date class="form-control" %}
+          {{ filter.form.start_date_gte.label_tag }}
+          {% render_field filter.form.start_date_gte class="form-control" %}
+        </div>
+        <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.finish_date_lte.label_tag }}
+          {% render_field filter.form.finish_date_lte class="form-control" %}
+        </div>
+        <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.finish_date_gte.label_tag }}
+          {% render_field filter.form.finish_date_gte class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
           {{ filter.form.status.label_tag }}
           {% render_field filter.form.status class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
-          {{ filter.form.meters.label_tag }}
-          {% render_field filter.form.meters class="form-control" %}
+          {{ filter.form.meters_lte.label_tag }}
+          {% render_field filter.form.meters_lte class="form-control" %}
+        </div>
+        <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.meters_gte.label_tag }}
+          {% render_field filter.form.meters_gte class="form-control" %}
         </div>
       </div>
       <button type="submit" class="btn btn-primary">
@@ -52,8 +72,8 @@
       {% for item in filter.qs %}
         <tr>
           <td>{{ item.tool }}</td>
-          <td>{{ item.tool.station }}</td>
-          <td>{{ item.tool.machine }}</td>
+          <td>{{ item.station }}</td>
+          <td>{{ item.machine }}</td>
           <td>{{ item.start_date|date:"d M, Y" }}</td>
           <td>{% if item.finish_date %}{{ item.finish_date|date:"Y-m-d" }}{% endif %}</td>
           <td>{% if item.status is False %} In use {% else %} Used {% endif %} </td>
