--- a/templates/tools/return.html
+++ b/templates/tools/return.html
@@ -3,16 +3,14 @@
 
 {% block content %}
     {% if request.user.is_staff %}
-    <p><a href="{% url 'tools_app:operation-update-create-view' %}">CHANGE TOOL</a></p>
-
-    <p><a href="{% url 'tools_app:operation-update-view' %}">Change</a></p>
+    <p><a href="{% url 'tools_app:operation-update-view' %}">CHANGE TOOL</a></p>
     {% endif %}
 {{ listed }}
     <form method="get">
     <div class="well">
       <h4 style="margin-top: 0">Tool change</h4>
       <div class="row">
-        <div class="form-group col-sm-4 col-md-3">
+    <div class="form-group col-sm-4 col-md-3">
           {{ filter.form.machine.label_tag }}
           {% render_field filter.form.machine class="form-control" %}
         </div>
@@ -25,17 +23,34 @@
           {% render_field filter.form.tool class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
-          {{ filter.form.start_date.label_tag }}
-          {% render_field filter.form.start_date class="form-control" %}
+          {{ filter.form.start_date_lte.label_tag }}
+          {% render_field filter.form.start_date_lte class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
-          {{ filter.form.finish_date.label_tag }}
-          {% render_field filter.form.finish_date class="form-control" %}
+          {{ filter.form.start_date_gte.label_tag }}
+          {% render_field filter.form.start_date_gte class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
-          {{ filter.form.meters.label_tag }}
-          {% render_field filter.form.meters class="form-control" %}
+          {{ filter.form.finish_date_lte.label_tag }}
+          {% render_field filter.form.finish_date_lte class="form-control" %}
         </div>
+        <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.finish_date_gte.label_tag }}
+          {% render_field filter.form.finish_date_gte class="form-control" %}
+        </div>
+        <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.status.label_tag }}
+          {% render_field filter.form.status class="form-control" %}
+        </div>
+        <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.meters_lte.label_tag }}
+          {% render_field filter.form.meters_lte class="form-control" %}
+        </div>
+        <div class="form-group col-sm-4 col-md-3">
+          {{ filter.form.meters_gte.label_tag }}
+          {% render_field filter.form.meters_gte class="form-control" %}
+        </div>
+
       </div>
         <button type="submit" class="btn btn-primary">
         <span class="glyphicon glyphicon-search"></span> Search
@@ -43,7 +58,6 @@
     </div>
   </form>
     <div>
-        <div class="alert alert-info">Operations / Returning</div>
         <table id="table" class="table table-stripped">
             <thead class="alert-success">
             <tr>
@@ -85,4 +99,7 @@
             </tbody>
         </table>
     </div>
+
+<div><a href="{% url 'tools_app:export_csv' %}?{{request.GET.urlencode}}">
+<button type="button" class="button">Export to CSV</button></a></div>
 {% endblock %}
