--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
         <p><a href="{% url 'tools_app:search-form' %}">Job Update</a></p>
-        <p><a href="{% url 'tools_app:returning' %}">Operations</a></p>
+        <p><a href="{% url 'tools_app:returning' %}">Tool change operations</a></p>
         <a href="{% url 'homepage' %}">
     </a>
 {% endblock %}
