--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -3,6 +3,5 @@
         <p><a href="{% url 'tools_app:search-form' %}">Job Update</a></p>
         <p><a href="{% url 'tools_app:returning' %}">Tool change operations</a></p>
         <p><a href="{% url 'tools_app:in-use' %}">Tools in use</a></p>
-        <a href="{% url 'homepage' %}">
-    </a>
+        <a href="{% url 'homepage' %}"></a>
 {% endblock %}
