--- a/templates/tools/in_use.html
+++ b/templates/tools/in_use.html
@@ -2,30 +2,35 @@
 {% block content %}
 <h4>TOOLS IN USE ON THE MACHINE</h4>
     <div>
+        {% regroup tools_list by machine as machine_list %}
+        {% for machine in machine_list %}
+        <br>
+        <div class="alert alert-primary">
+            {{ machine.grouper }}
+        </div>
         <table id="table" class="table table-hover">
             <thead class="alert-success">
             <tr>
-                <th>Machine</th>
                 <th>Station</th>
                 <th>Tool</th>
                 <th>Tool Type</th>
                 <th>Start Date</th>
-                <th>Meters</th>
+                <th>Hours</th>
             </tr>
             </thead>
             <tbody>
-            {% for operation in tools_in_use %}
-                <tr>
-                    <td>{{ operation.machine}}</td>
+                    {% for operation in machine.list %}
+                    <tr>
                     <td>{{ operation.station }}</td>
                     <td>{{ operation.tool }}</td>
                     <td>{{ operation.tool_type }}</td>
                     <td>{{ operation.start_date|date:"Y-m-d" }}</td>
-                    <td>{{ operation.meters }}</td>
-                </tr>
-            {% endfor %}
+                    <td>{{ operation.hours }}</td>
+                    </tr>
+                    {% endfor %}
             </tbody>
         </table>
+        {% endfor %}
     </div>
 
 {% endblock %}
