--- a/templates/tools/return.html
+++ b/templates/tools/return.html
@@ -7,7 +7,11 @@
     </button></a>
     <a href="{% url 'tools_app:operation-barcode-view' %}">
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Change tool(barcode)
-    </button></a></div>
+    </button></a>
+    <a href="{% url 'tools_app:update-parts' %}">
+    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Update parts
+    </button></a>
+    </div>
     <br/>
     {% endif %}
     <form method="get">
@@ -52,12 +56,12 @@
           {% render_field filter.form.status class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
-          {{ filter.form.meters_lte.label_tag }}
-          {% render_field filter.form.meters_lte class="form-control" %}
+          {{ filter.form.hours_lte.label_tag }}
+          {% render_field filter.form.hours_lte class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
-          {{ filter.form.meters_gte.label_tag }}
-          {% render_field filter.form.meters_gte class="form-control" %}
+          {{ filter.form.hours_gte.label_tag }}
+          {% render_field filter.form.hours_gte class="form-control" %}
         </div>
 
       </div>
@@ -77,7 +81,7 @@
                 <th>Start Date</th>
                 <th>Finish Date</th>
                 <th>Status</th>
-                <th>Meters</th>
+                <th>Hours</th>
             </tr>
             </thead>
             <tbody>
@@ -92,7 +96,7 @@
                     <td>
                         {% if operation.status is True %} Used {% else %} In use {% endif %}
                     </td>
-                    <td>{{ operation.meters }}</td>
+                    <td>{{ operation.hours }}</td>
                 </tr>
             {% endfor %}
             </tbody>
