--- a/templates/gemba/daily_pareto.html
+++ b/templates/gemba/daily_pareto.html
@@ -5,36 +5,22 @@
     <div><a href="{% url 'gemba_app:pareto-details-create-view' %}">
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Add Pareto line
     </button></a>
+        <a href="{% url 'gemba_app:assign-shift' %}">
+    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Assign shift length
+    </button></a>
     </div>
+
   <br/>
   {% endif %}
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th scope="col">Downtime reasons</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for item in object_list %}
-            <tr>
-                <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.pk %}">{{ item.code }}</a></td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th scope="col">Scrap reasons</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for scrap in scrap_list %}
-            <tr>
-                <td><a href="{% url 'gemba_app:scrap-detail-create' pk=scrap.pk %}">{{ scrap.code }}</a></td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<p><b>Downtime reasons</b></p>
+    {% for item in object_list %}
+    <tr><a href="{% url 'gemba_app:downtime-detail-create' pk=item.pk %}">{{ item.code }}   |   </a></tr>
+    {% endfor %}
+<br/>
+<br/>
+<p><b>Scrap reasons</b></p>
+    {% for scrap in scrap_list %}
+    <tr><a href="{% url 'gemba_app:scrap-detail-create' pk=scrap.pk %}">{{ scrap.code }}  |   </a></tr>
+    {% endfor %}
 
 {% endblock %}
