--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-        <p><a href="{% url 'tools_app:search-form' %}">Job Update</a></p>
-        <p><a href="{% url 'tools_app:returning' %}">Tool change operations</a></p>
-        <p><a href="{% url 'tools_app:in-use' %}">Tools in use</a></p>
+        <p><a href="{% url 'gemba_app:index' %}">Gemba app</a></p>
+        <p><a href="{% url 'tools_app:index' %}">Tool app</a></p>
         <a href="{% url 'homepage' %}"></a>
 {% endblock %}
