--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container fixed">
-        <a class="navbar-brand" href="/">Tool life</a>
+        <a class="navbar-brand" href="/">Production</a>
         <button
           class="navbar-toggler" type="button"
           data-toggle="collapse" data-target="#navbarNavAltMarkup"
