--- a/templates/gemba/pareto.html
+++ b/templates/gemba/pareto.html
@@ -1,19 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
 {% load mathfilters %}
-<div><a href="{% url 'gemba_app:close-pareto' %}">
-    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Close Pareto
-    </button></a>
-    </div>
-<h1>PARETO</h1>
-    {% if pareto_list.shift == "--" %}
-    Shift started: {{ pareto_list.time_stamp|time:"h:i a" }} <b style="color:red">Please choose shift</b>
-    <a href="{% url 'gemba_app:assign-shift' %}">
-    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Assign shift length
+
+<div>{% if pareto_status == "Not exist" %}
+    <a href="{% url 'gemba_app:pareto-start-new' %}">
+    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Start new Pareto
     </button></a>
     {% else %}
-    Shift started: {{ pareto_list.time_stamp|time:"h:i a" }} - {{ pareto_list.shift }} - {{ pareto_list.hours }} hours
+    <a href="{% url 'gemba_app:pareto-details-create-view' %}">
+    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Add Pareto line
+    </button></a>
+    <a href="{% url 'gemba_app:downtime-user-view' %}">
+    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Add downtime
+    </button></a>
+    <a href="{% url 'gemba_app:scrap-user-view' %}">
+    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Add scrap
+    </button></a>
+    <a href="{% url 'gemba_app:close-pareto' %}">
+    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Close Pareto
+    </button></a>
     {% endif %}
+    </div>
+<h1>PARETO</h1>
+    Shift started: {{ pareto_list.time_stamp|time:"h:i a" }} - {{ pareto_list.shift }} - {{ pareto_list.hours }} hours
     <table class="table table-hover">
         <thead>
         <tr>
@@ -53,7 +62,7 @@
         {% endif %}
         <tr>
         {% for pareto_item in pareto_list.jobs.all %}
-            <td>{{ pareto_item.job.name }}</td>
+            <td><a href="{% url 'gemba_app:pareto-details-view' pk=pareto_item.pk %}">{{ pareto_item.job.name }}</a></td>
             <td>{{ pareto_item.qty }}</td>
             <td>{{ pareto_item.good }}</td>
             <td>{{ pareto_item.qty|sub:pareto_item.good }}</td>
@@ -69,6 +78,8 @@
         </tr>
         </tbody>
     </table>
+<div>
+    <div>
     <table class="table table-hover">
         <thead>
         <tr>
@@ -84,7 +95,7 @@
               </tr>
         {% endif %}
              <tr>{% for pareto_item in pareto_list.downtimes.all %}
-            <td>{{ pareto_item.downtime.code }} - {{ pareto_item.downtime.description }}</td>
+            <td><a href="{% url 'gemba_app:downtime-detail-view' pk=pareto_item.pk %}">{{ pareto_item.downtime.code }} - {{ pareto_item.downtime.description }}</a></td>
             <td>{{ pareto_item.minutes }}</td>
                  <td>{{ pareto_item.job }}</td>
              </tr>
@@ -96,6 +107,8 @@
         </tr>
         </tbody>
     </table>
+        </div>
+    <div>
         {% if total_scrap_cal|sub:total_scrap < 0 %} Remove scrap qty:
         {{ total_scrap|sub:total_scrap_cal }} {% else %} Missing qty: {{ total_scrap_cal|sub:total_scrap }} {% endif %}
             <table class="table table-hover">
@@ -113,7 +126,7 @@
               </tr>
         {% endif %}
              <tr>{% for pareto_item in pareto_list.scrap.all %}
-            <td>{{ pareto_item.scrap.code }} - {{ pareto_item.scrap.description }}</td>
+                 <td><a href="{% url 'gemba_app:scrap-detail-view' pk=pareto_item.pk %}">{{ pareto_item.scrap.code }} - {{ pareto_item.scrap.description }}</a></td>
             <td>{{ pareto_item.qty }}</td>
                  <td>{{ pareto_item.job }}</td>
              </tr>
@@ -125,4 +138,6 @@
         </tr>
         </tbody>
     </table>
+    </div>
+</div>
 {% endblock %}
