--- a/templates/gemba/index.html
+++ b/templates/gemba/index.html
@@ -2,5 +2,6 @@
 {% block content %}
         <p><a href="{% url 'gemba_app:daily-oee-report' %}">Daily OEE Report</a></p>
         <p><a href="{% url 'gemba_app:downtimes-view' %}">Downtimes View</a></p>
+        <p><a href="{% url 'gemba_app:scraps-view' %}">Scrap View</a></p>
         <a href="{% url 'homepage' %}"></a>
 {% endblock %}
