--- a/templates/gemba/scraps_search.html
+++ b/templates/gemba/scraps_search.html
@@ -1,34 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
-<h4>Downtime reasons View:</h4>
-<form action="{% url 'gemba_app:search-result' %}" method="get">
-    <input name="q" type="text" placeholder="Search...">
- </form>
+<h4>Results:</h4>
+<p><a href="{% url 'gemba_app:scraps-view' %}">Go back</a></p>
 <table class="table table-hover">
         <thead>
         <tr>
             <th scope="col">Date</th>
             <th scope="col">User / Line</th>
-            <th scope="col">Downtime</th>
+            <th scope="col">Scrap</th>
             <th scope="col">Description</th>
-            <th scope="col">Minutes</th>
+            <th scope="col">Qty</th>
             <th scope="col">Job</th>
             <th scope="col">Pareto ID</th>
         </tr>
         </thead>
         <tbody>
-        {% for object in today_downtimes %}
+        {% for object in object_list %}
             <tr>
                 <td>{{ object.pareto_date }}</td>
                 <td>{{ object.user }}</td>
-                <td>{{ object.downtime }}</td>
-                <td>{{ object.downtime.description }}</td>
-                <td>{{ object.minutes }}</td>
+                <td>{{ object.scrap }}</td>
+                <td>{{ object.scrap.description }}</td>
+                <td>{{ object.qty }}</td>
                 <td>{{ object.job }}</td>
                 <td>{{ object.pareto_id }}</td>
            {% endfor %}
             </tr>
         </tbody>
     </table>
-
 {% endblock %}
