Improving Gemba app

--- a/templates/gemba/downtimes_view.html
+++ b/templates/gemba/downtimes_view.html
@@ -9,8 +9,7 @@
         <tr>
             <th scope="col">Date</th>
             <th scope="col">User / Line</th>
-            <th scope="col">Downtime</th>
-            <th scope="col">Description</th>
+            <th scope="col">Downtime Reason</th>
             <th scope="col">Minutes</th>
             <th scope="col">Job</th>
             <th scope="col">Pareto ID</th>
@@ -22,7 +21,6 @@
                 <td>{{ object.pareto_date }}</td>
                 <td>{{ object.user }}</td>
                 <td>{{ object.downtime }}</td>
-                <td>{{ object.downtime.description }}</td>
                 <td>{{ object.minutes }}</td>
                 <td>{{ object.job }}</td>
                 <td>{{ object.pareto_id }}</td>
