--- a/templates/gemba/scraps_view.html
+++ b/templates/gemba/scraps_view.html
@@ -9,8 +9,7 @@
         <tr>
             <th scope="col">Date</th>
             <th scope="col">User / Line</th>
-            <th scope="col">Scrap</th>
-            <th scope="col">Description</th>
+            <th scope="col">Scrap Reason</th>
             <th scope="col">Qty</th>
             <th scope="col">Job</th>
             <th scope="col">Pareto ID</th>
@@ -22,7 +21,6 @@
                 <td>{{ object.pareto_date }}</td>
                 <td>{{ object.user }}</td>
                 <td>{{ object.scrap }}</td>
-                <td>{{ object.scrap.description }}</td>
                 <td>{{ object.qty }}</td>
                 <td>{{ object.job }}</td>
                 <td>{{ object.pareto_id }}</td>
